# mcp-horoscope-numerology

./: CHANGELOG.md  Dockerfile  README.md  docker-compose.yml  pyproject.toml  server.json  server.py
divineapi_horoscope_numerology_mcp/: __init__.py  server.py
